--- a/app/src/main/res/layout/fragment_start_training.xml
+++ b/app/src/main/res/layout/fragment_start_training.xml
@@ -20,13 +20,15 @@
         <TextView
             android:id="@+id/tv_label_start_training_number_of_words"
             style="@style/LabelStartTraining"
+            android:layout_marginTop="@dimen/distance_large"
             android:text="@string/start_training_label_number_of_words"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_label_start_training_instructions" />
 
-        <Spinner
+        <com.jaredrummler.materialspinner.MaterialSpinner
             android:id="@+id/sp_start_training_number_of_words"
             style="@style/SpinnerStartTraining"
+            android:layout_width="match_parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_label_start_training_number_of_words" />
 
@@ -37,9 +39,10 @@
             app:layout_constraintStart_toStartOf="@+id/tv_label_start_training_number_of_words"
             app:layout_constraintTop_toBottomOf="@+id/sp_start_training_number_of_words" />
 
-        <Spinner
+        <com.jaredrummler.materialspinner.MaterialSpinner
             android:id="@+id/sp_start_training_lesson"
             style="@style/SpinnerStartTraining"
+            android:layout_width="match_parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_label_start_training_lesson" />
 
@@ -50,36 +53,49 @@
             app:layout_constraintStart_toStartOf="@+id/tv_label_start_training_lesson"
             app:layout_constraintTop_toBottomOf="@+id/sp_start_training_lesson" />
 
-        <Spinner
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline"
+            android:layout_width="1dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.4" />
+
+        <com.jaredrummler.materialspinner.MaterialSpinner
             android:id="@+id/sp_start_training_knowledge_level_range"
             style="@style/SpinnerStartTraining"
-            app:layout_constraintEnd_toStartOf="@+id/sp_start_training_knowledge_level"
-            app:layout_constraintHorizontal_bias="1"
+            android:layout_width="0dp"
+            android:layout_marginEnd="@dimen/distance_small"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/guideline"
             app:layout_constraintTop_toBottomOf="@+id/tv_label_start_training_knowledge_level" />
 
-        <Spinner
+        <com.jaredrummler.materialspinner.MaterialSpinner
             android:id="@+id/sp_start_training_knowledge_level"
             style="@style/SpinnerStartTraining"
+            android:layout_width="0dp"
+            android:layout_marginStart="@dimen/distance_small"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/guideline"
             app:layout_constraintTop_toBottomOf="@+id/tv_label_start_training_knowledge_level" />
 
         <TextView
             android:id="@+id/tv_label_start_training_reverse"
             style="@style/LabelStartTraining"
+            android:layout_width="0dp"
             android:text="@string/start_training_label_reverse_training"
-            app:layout_constraintStart_toStartOf="@+id/tv_label_start_training_knowledge_level"
+            app:layout_constraintEnd_toStartOf="@+id/sw_start_training_reverse_training"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/sp_start_training_knowledge_level_range" />
 
-        <Switch
+        <androidx.appcompat.widget.SwitchCompat
             android:id="@+id/sw_start_training_reverse_training"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/distance_medium"
-            android:layout_marginTop="@dimen/distance_small"
+            android:theme="@style/Switch"
             android:layout_marginEnd="@dimen/distance_medium"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_label_start_training_reverse"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_label_start_training_reverse" />
+            app:layout_constraintTop_toTopOf="@+id/tv_label_start_training_reverse" />
 
         <Button
             android:id="@+id/bt_start_training"
