--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="primaryLightColor">#5ddef4</color>
     <color name="primaryDarkColor">#007c91</color>
     <color name="secondaryColor">#ff6e40</color>
+    <color name="white">#ffffff</color>
     <color name="bg_row_background">#fa315b</color>
     <color name="knowledgeLevel_1">#dd2c00</color>
     <color name="knowledgeLevel_2">#ffab00</color>
@@ -11,6 +12,4 @@
     <color name="knowledgeLevel_4">#aeea00</color>
     <color name="knowledgeLevel_5">#00c853</color>
     <color name="grey">#9e9e9e</color>
-
-
 </resources>
