--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,7 @@
         <item name="colorPrimaryDark">@color/primaryDarkColor</item>
         <item name="colorAccent">@color/secondaryColor</item>
         <item name="preferenceTheme">@style/PreferenceThemeOverlay.v14.Material</item>
+        <item name="android:windowBackground">@color/white</item>
     </style>
 
     <!-- Main activity action bar styles -->
@@ -26,16 +27,6 @@
         <item name="android:textColor">@color/grey</item>
     </style>
 
-    <style name="LabelStartTraining" parent="@style/TextAppearance.AppCompat.Title">
-        <item name="android:layout_marginStart">@dimen/distance_medium</item>
-        <item name="android:layout_marginLeft">@dimen/distance_medium</item>
-        <item name="android:layout_marginEnd">@dimen/distance_medium</item>
-        <item name="android:layout_marginRight">@dimen/distance_medium</item>
-        <item name="android:layout_marginTop">@dimen/distance_large</item>
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-    </style>
-
     <style name="LabelHeadline" parent="@style/TextAppearance.AppCompat.Title">
         <item name="android:textColor">@color/primaryDarkColor</item>
         <item name="android:layout_marginStart">@dimen/distance_medium</item>
@@ -43,10 +34,20 @@
         <item name="android:layout_marginEnd">@dimen/distance_medium</item>
         <item name="android:layout_marginRight">@dimen/distance_medium</item>
         <item name="android:layout_marginTop">@dimen/distance_medium</item>
+        <item name="android:layout_marginBottom">@dimen/distance_large</item>
         <item name="android:textAlignment">center</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">@dimen/textSize_large</item>
+    </style>
+
+    <style name="LabelStartTraining" parent="@style/TextAppearance.AppCompat.Title">
+        <item name="android:layout_marginStart">@dimen/distance_medium</item>
+        <item name="android:layout_marginLeft">@dimen/distance_medium</item>
+        <item name="android:layout_marginEnd">@dimen/distance_medium</item>
+        <item name="android:layout_marginRight">@dimen/distance_medium</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
     </style>
 
     <style name="SpinnerStartTraining" parent="android:Widget.TextView.SpinnerItem">
@@ -58,6 +59,11 @@
         <item name="android:layout_marginTop">@dimen/distance_small</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="Switch" parent="AppTheme">
+        <item name="colorControlActivated">@color/colorPrimary</item>
+        <item name="colorControlNormal">@color/secondaryColor</item>
     </style>
 
 
