--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,11 +6,15 @@
     <color name="secondaryColor">#ff6e40</color>
     <color name="white">#ffffff</color>
     <color name="bg_row_background">#fa315b</color>
-    <color name="knowledgeLevel_1">#dd2c00</color>
-    <color name="knowledgeLevel_2">#ffab00</color>
-    <color name="knowledgeLevel_3">#ffea00</color>
+    <color name="knowledgeLevel_1">@color/red</color>
+    <color name="knowledgeLevel_2">@color/orange</color>
+    <color name="knowledgeLevel_3">@color/yellow</color>
     <color name="knowledgeLevel_4">#aeea00</color>
-    <color name="knowledgeLevel_5">#00c853</color>
+    <color name="knowledgeLevel_5">@color/green</color>
+    <color name="red">#dd2c00</color>
+    <color name="green">#00c853</color>
+    <color name="orange">#ffab00</color>
+    <color name="yellow">#ffea00</color>
     <color name="grey">#9e9e9e</color>
     <color name="black">#000000</color>
 
