--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -35,4 +35,17 @@
         <item>@string/start_training_number_of_words_large</item>
         <item>@string/start_training_number_of_words_50</item>
     </string-array>
+
+    <string-array name="settings_adapt_training">
+        <item>@string/settings_adapt_training_low</item>
+        <item>@string/settings_adapt_training_medium</item>
+        <item>@string/settings_adapt_training_high</item>
+    </string-array>
+
+    <string-array name="settings_adapt_training_values">
+        <item>@string/settings_adapt_training_low_key</item>
+        <item>@string/settings_adapt_training_medium_key</item>
+        <item>@string/settings_adapt_training_high_key</item>
+    </string-array>
+
 </resources>
