--- a/app/src/main/res/xml/fragment_settings.xml
+++ b/app/src/main/res/xml/fragment_settings.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.settings.SettingsFragment">
 
     <androidx.preference.PreferenceCategory android:title="Default Settings">
         <ListPreference
-            android:defaultValue="@string/settings_default_knowledgeLevel_default"
+            android:defaultValue="@string/knowledgeLevel3"
             android:entries="@array/knowledgeLevel"
             android:entryValues="@array/knowledgeLevel_value"
             android:key="@string/settings_default_knowledgeLevel_key"
-            android:summary="@string/settings_default_knowledgeLevel_summary"
+            app:useSimpleSummaryProvider="true"
             android:title="@string/settings_default_knowledgeLevel_title" />
 
         <ListPreference
@@ -19,7 +20,7 @@
             android:entries="@array/settings_adapt_training"
             android:entryValues="@array/settings_adapt_training_values"
             android:key="@string/settings_reward_correct_training_key"
-            android:summary="@string/settings_adapt_training_medium"
+            app:useSimpleSummaryProvider="true"
             android:title="@string/settings_reward_correct_training_title" />
 
         <ListPreference
@@ -27,7 +28,7 @@
             android:entries="@array/settings_adapt_training"
             android:entryValues="@array/settings_adapt_training_values"
             android:key="@string/settings_punish_wrong_training_key"
-            android:summary="@string/settings_adapt_training_medium"
+            app:useSimpleSummaryProvider="true"
             android:title="@string/settings_punish_wrong_training_title" />
     </androidx.preference.PreferenceCategory>
     <androidx.preference.PreferenceCategory android:title="Language Settings">
@@ -36,7 +37,6 @@
         android:entries="@array/languages"
         android:entryValues="@array/languages_value"
         android:key="@string/settings_select_language_key"
-        android:summary="@string/settings_select_language_summary"
         android:title="@string/settings_select_language_title" />
 
     <Preference
