--- a/app/src/main/res/layout/lesson_item.xml
+++ b/app/src/main/res/layout/lesson_item.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginStart="@dimen/distance_super_small"
+    android:layout_marginTop="@dimen/distance_small"
+    android:layout_marginEnd="@dimen/distance_super_small"
+    android:elevation="@dimen/cardElevation"
+    android:orientation="vertical"
+    android:translationZ="@dimen/cardTranslationZ"
+    app:cardCornerRadius="@dimen/cardCornerRadius">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -66,4 +73,4 @@
             tools:text="lessonDescription" />
     </LinearLayout>
 
-</FrameLayout>
+</androidx.cardview.widget.CardView>
