now uses seekbars to select how much correct/wrong training affects the knowledgelevel of a word

--- a/app/src/main/res/xml/fragment_settings.xml
+++ b/app/src/main/res/xml/fragment_settings.xml
@@ -15,11 +15,25 @@
             app:useSimpleSummaryProvider="true"
             android:title="@string/settings_default_knowledgeLevel_title" />
 
-        <ListPreference
+        <SeekBarPreference
+            android:defaultValue="5"
+            android:key="@string/settings_reward_correct_training_key"
+            android:max="10"
+            android:title="@string/settings_reward_correct_training_title"
+            app:showSeekBarValue="false" />
+
+        <SeekBarPreference
+            android:defaultValue="5"
+            android:key="@string/settings_punish_wrong_training_key"
+            android:max="10"
+            android:title="@string/settings_punish_wrong_training_title"
+            app:showSeekBarValue="false" />
+
+        <!--<ListPreference
             android:defaultValue="@string/settings_adapt_training_medium"
             android:entries="@array/settings_adapt_training"
             android:entryValues="@array/settings_adapt_training_values"
-            android:key="@string/settings_reward_correct_training_key"
+            android:key=""
             app:useSimpleSummaryProvider="true"
             android:title="@string/settings_reward_correct_training_title" />
 
@@ -29,7 +43,7 @@
             android:entryValues="@array/settings_adapt_training_values"
             android:key="@string/settings_punish_wrong_training_key"
             app:useSimpleSummaryProvider="true"
-            android:title="@string/settings_punish_wrong_training_title" />
+            android:title="@string/settings_punish_wrong_training_title" />-->
     </androidx.preference.PreferenceCategory>
     <androidx.preference.PreferenceCategory android:title="Language Settings">
     <ListPreference
