reformat code and update dependencies

--- a/app/src/main/res/xml/fragment_settings.xml
+++ b/app/src/main/res/xml/fragment_settings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.settings.SettingsFragment">
@@ -12,8 +12,8 @@
             android:entries="@array/knowledgeLevel"
             android:entryValues="@array/knowledgeLevel_value"
             android:key="@string/settings_default_knowledgeLevel_key"
-            app:useSimpleSummaryProvider="true"
-            android:title="@string/settings_default_knowledgeLevel_title" />
+            android:title="@string/settings_default_knowledgeLevel_title"
+            app:useSimpleSummaryProvider="true" />
 
         <SeekBarPreference
             android:defaultValue="5"
@@ -31,24 +31,24 @@
 
     </androidx.preference.PreferenceCategory>
     <androidx.preference.PreferenceCategory android:title="Language Settings">
-    <ListPreference
-        android:defaultValue="@string/settings_select_language_default"
-        android:entries="@array/languages"
-        android:entryValues="@array/languages_value"
-        android:key="@string/settings_select_language_key"
-        android:title="@string/settings_select_language_title" />
+        <ListPreference
+            android:defaultValue="@string/settings_select_language_default"
+            android:entries="@array/languages"
+            android:entryValues="@array/languages_value"
+            android:key="@string/settings_select_language_key"
+            android:title="@string/settings_select_language_title" />
 
-    <Preference
-        android:key="@string/settings_add_language_key"
-        android:persistent="false"
-        android:summary="@string/settings_add_language_summary"
-        android:title="@string/settings_add_language_title" />
+        <Preference
+            android:key="@string/settings_add_language_key"
+            android:persistent="false"
+            android:summary="@string/settings_add_language_summary"
+            android:title="@string/settings_add_language_title" />
 
-    <Preference
-        android:key="@string/settings_delete_language_key"
-        android:persistent="false"
-        android:summary="@string/settings_delete_language_summary"
-        android:title="@string/settings_delete_language_title" />
+        <Preference
+            android:key="@string/settings_delete_language_key"
+            android:persistent="false"
+            android:summary="@string/settings_delete_language_summary"
+            android:title="@string/settings_delete_language_title" />
     </androidx.preference.PreferenceCategory>
 
 </androidx.preference.PreferenceScreen>
