improved animation for fragment transactions

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -12,7 +12,11 @@
         tools:layout="@layout/fragment_start_training">
         <action
             android:id="@+id/action_startTraining_dest_to_training_dest"
-            app:destination="@id/training_dest" />
+            app:destination="@id/training_dest"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_right"
+            app:popExitAnim="@anim/slide_out_left" />
     </fragment>
     <fragment
         android:id="@+id/library_dest"
@@ -25,10 +29,11 @@
         android:label="@string/drawer_label_lessons"
         tools:layout="@layout/fragment_lessons">
         <action
-            android:id="@+id/action_lessons_dest_to_updateLessonFragment"
+            android:id="@+id/action_lessons_dest_to_updateLesson_dest"
             app:destination="@id/updateLessonFragment"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right" />
     </fragment>
     <fragment
@@ -46,10 +51,6 @@
         android:name="com.sliebald.cula.ui.training.TrainingFragment"
         android:label="@string/title_training"
         tools:layout="@layout/fragment_training">
-        <action
-            android:id="@+id/action_training_dest_to_startTraining_dest"
-            app:destination="@+id/startTraining_dest"
-            app:popUpTo="@id/startTraining_dest" />
         <argument
             android:name="trainingData"
             android:defaultValue="@null"
@@ -61,14 +62,6 @@
         android:name="com.sliebald.cula.ui.updateLesson.UpdateLessonFragment"
         android:label="@string/title_update_lesson_entry"
         tools:layout="@layout/fragment_update_lesson">
-        <action
-            android:id="@+id/action_updateLessonFragment_to_lessons_dest"
-            app:destination="@id/lessons_dest"
-            app:enterAnim="@anim/slide_in_left"
-            app:exitAnim="@anim/slide_out_right"
-            app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_in_right"
-            app:popUpTo="@+id/lessons_dest" />
         <argument
             android:name="lessonId"
             app:argType="integer" />
