refactored updateLibraryActivity to fragment using Jetpack navigation.

--- a/app/src/main/res/layout/fragment_update_library.xml
+++ b/app/src/main/res/layout/fragment_update_library.xml
@@ -7,7 +7,7 @@
         android:id="@+id/activity_update_library"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.sliebald.cula.ui.updateLibrary.UpdateLibraryActivity">
+        tools:context="com.sliebald.cula.ui.updateLibrary.UpdateLibraryFragment">
 
         <TextView
             android:id="@+id/tv_label_add_native_word"
@@ -141,7 +141,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/distance_medium"
             android:focusable="true"
-            android:onClick="commitLibraryEntry"
             android:text="@string/update_library_button_save_word"
             app:layout_constraintEnd_toStartOf="@+id/button_add_word_pair_return"
             app:layout_constraintHorizontal_chainStyle="packed"
@@ -156,7 +155,6 @@
             android:layout_marginStart="@dimen/distance_normal"
             android:layout_marginTop="@dimen/distance_medium"
             android:focusable="true"
-            android:onClick="commitLibraryEntry"
             android:text="@string/update_library_button_save_word_return"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/button_add_word_pair"
