added about page and made navigation drawer nicer

--- a/app/src/main/res/layout/library_item.xml
+++ b/app/src/main/res/layout/library_item.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="@dimen/distance_super_small"
-    android:layout_marginTop="@dimen/distance_super_small"
-    android:layout_marginEnd="@dimen/distance_super_small"
+    android:layout_marginStart="@dimen/distance_small"
+    android:layout_marginTop="@dimen/distance_small"
+    android:layout_marginEnd="@dimen/distance_small"
     android:elevation="@dimen/cardElevation"
     android:orientation="vertical"
     android:translationZ="@dimen/cardTranslationZ"
