--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="primaryColor">#00acc1</color>
+    <color name="colorPrimary">@color/primaryColor</color>
     <color name="primaryLightColor">#5ddef4</color>
     <color name="primaryDarkColor">#007c91</color>
+    <color name="colorPrimaryDark">@color/primaryDarkColor</color>
+
     <color name="secondaryColor">#ff6e40</color>
     <color name="white">#ffffff</color>
     <color name="bg_row_background">#fa315b</color>
