--- a/app/src/main/res/layout/fragment_training.xml
+++ b/app/src/main/res/layout/fragment_training.xml
@@ -49,7 +49,7 @@
             android:layout_width="@dimen/training_translation_edit_text_width"
             android:layout_height="wrap_content"
             android:hint="@string/activity_training_hint_translated_word"
-            android:inputType="text"
+            android:inputType="textNoSuggestions|textVisiblePassword"
             android:textSize="@dimen/textSize_large"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
