--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -66,6 +66,9 @@
         <item name="colorControlNormal">@color/secondaryColor</item>
     </style>
 
+    <style name="text" parent="@style/TextAppearance.AppCompat.Body2">
+        <item name="android:textSize">@dimen/textSize_medium</item>
+    </style>
 
     <style name="about_text" parent="@style/TextAppearance.AppCompat.Body2">
         <item name="android:textSize">@dimen/textSize_medium</item>
