--- a/app/src/main/res/menu/sort_menu.xml
+++ b/app/src/main/res/menu/sort_menu.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/menu_sort"
-        android:title="Sort"
+        android:icon="@drawable/ic_sort"
+        android:title="@string/sort_sort"
         app:showAsAction="always" />
 </menu>
