--- a/app/src/main/res/menu/sort_menu.xml
+++ b/app/src/main/res/menu/sort_menu.xml
@@ -4,6 +4,6 @@
     <item
         android:id="@+id/menu_sort"
         android:icon="@drawable/ic_sort"
-        android:title="@string/sort_sort"
+        android:title="@string/sort"
         app:showAsAction="always" />
 </menu>
