slightly improved checkbox colors

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -74,5 +74,8 @@
         <item name="android:textSize">@dimen/textSize_medium</item>
         <item name="android:layout_margin">@dimen/distance_normal</item>
     </style>
+    <style name="checkbox" parent="@style/Widget.AppCompat.CompoundButton.CheckBox">
+           <item name="android:buttonTint">@color/colorPrimary</item>
+    </style>
 
 </resources>
