--- a/app/src/main/res/layout/lesson_mapping_item.xml
+++ b/app/src/main/res/layout/lesson_mapping_item.xml
@@ -6,12 +6,13 @@
     android:layout_height="wrap_content">
 
     <CheckBox
+        style="@style/checkbox"
         android:id="@+id/cb_lesson_mapping"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/distance_small"
-        android:scaleX="1.4"
-        android:scaleY="1.4" />
+        android:scaleX="1.3"
+        android:scaleY="1.3" />
 
     <View
         android:layout_width="1dp"
